# api/swagger_server/models/current_lifter_next_entry_id.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class CurrentLifterNextEntryId(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, attempt_one_indexed: float=None, entry_id: float=None):  # noqa: E501
+        """CurrentLifterNextEntryId - a model defined in Swagger
+
+        :param attempt_one_indexed: The attempt_one_indexed of this CurrentLifterNextEntryId.  # noqa: E501
+        :type attempt_one_indexed: float
+        :param entry_id: The entry_id of this CurrentLifterNextEntryId.  # noqa: E501
+        :type entry_id: float
+        """
+        self.swagger_types = {
+            'attempt_one_indexed': float,
+            'entry_id': float
+        }
+
+        self.attribute_map = {
+            'attempt_one_indexed': 'attemptOneIndexed',
+            'entry_id': 'entryId'
+        }
+        self._attempt_one_indexed = attempt_one_indexed
+        self._entry_id = entry_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'CurrentLifterNextEntryId':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The CurrentLifter_nextEntryId of this CurrentLifterNextEntryId.  # noqa: E501
+        :rtype: CurrentLifterNextEntryId
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def attempt_one_indexed(self) -> float:
+        """Gets the attempt_one_indexed of this CurrentLifterNextEntryId.
+
+
+        :return: The attempt_one_indexed of this CurrentLifterNextEntryId.
+        :rtype: float
+        """
+        return self._attempt_one_indexed
+
+    @attempt_one_indexed.setter
+    def attempt_one_indexed(self, attempt_one_indexed: float):
+        """Sets the attempt_one_indexed of this CurrentLifterNextEntryId.
+
+
+        :param attempt_one_indexed: The attempt_one_indexed of this CurrentLifterNextEntryId.
+        :type attempt_one_indexed: float
+        """
+
+        self._attempt_one_indexed = attempt_one_indexed
+
+    @property
+    def entry_id(self) -> float:
+        """Gets the entry_id of this CurrentLifterNextEntryId.
+
+
+        :return: The entry_id of this CurrentLifterNextEntryId.
+        :rtype: float
+        """
+        return self._entry_id
+
+    @entry_id.setter
+    def entry_id(self, entry_id: float):
+        """Sets the entry_id of this CurrentLifterNextEntryId.
+
+
+        :param entry_id: The entry_id of this CurrentLifterNextEntryId.
+        :type entry_id: float
+        """
+
+        self._entry_id = entry_id
